<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>grafika_beadando</groupId>
  <artifactId>grafika_beadando</artifactId>
  <version>0.0.1-SNAPSHOT</version>

  <!-- IDE JÖNNEK A FÜGGŐSÉGEK -->
  <dependencies>
    <!-- Core LWJGL -->
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl</artifactId>
      <version>3.3.3</version>
    </dependency>
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl-glfw</artifactId>
      <version>3.3.3</version>
    </dependency>
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl-opengl</artifactId>
      <version>3.3.3</version>
    </dependency>

    <!-- Natives (példa Windowsra, ha Linux/Mac akkor natives-linux / natives-macos) -->
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl</artifactId>
      <version>3.3.3</version>
      <classifier>natives-windows</classifier>
      <scope>runtime</scope>
    </dependency>
    <!-- LWJGL OpenAL -->
    <dependency>
        <groupId>org.lwjgl</groupId>
        <artifactId>lwjgl-openal</artifactId>
        <version>3.3.4</version>
    </dependency>
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl-glfw</artifactId>
      <version>3.3.3</version>
      <classifier>natives-windows</classifier>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.lwjgl</groupId>
      <artifactId>lwjgl-opengl</artifactId>
      <version>3.3.3</version>
      <classifier>natives-windows</classifier>
      <scope>runtime</scope>
    </dependency>
    <dependency>
        <groupId>org.lwjgl</groupId>
        <artifactId>lwjgl-openal</artifactId>
        <version>3.3.4</version>
        <classifier>natives-windows</classifier>
    </dependency>
    <dependency>
    <groupId>org.lwjgl</groupId>
    <artifactId>lwjgl-stb</artifactId>
    <version>3.3.3</version>
	</dependency>
	<dependency>
	    <groupId>org.lwjgl</groupId>
	    <artifactId>lwjgl-stb</artifactId>
	    <version>3.3.3</version>
	    <classifier>natives-windows</classifier>
	</dependency>
  </dependencies>

  <build>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <release>21</release>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
